{
    "name": "Mouse",
    "maps": [
        {
            "name": "Mouse",
            "id": "07737096-4b7e-4bf0-936b-21bf9fb50028",
            "actions": [
                {
                    "name": "RightClick",
                    "type": "Button",
                    "id": "4e86527e-af1a-4458-9292-aaa64a6997f5",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "MousePosition",
                    "type": "Value",
                    "id": "3d6b01e0-b9ae-46ff-a8f9-1c1f95564937",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "LeftClick",
                    "type": "Button",
                    "id": "88aa66cb-d88b-444a-b0fc-23507dcc3dff",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "LeftClickHold",
                    "type": "Button",
                    "id": "e38e1735-6ff8-4530-9ba5-ab85a82eabe5",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "66f61aa6-0341-433b-88d4-8e0df8e7e136",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5de1e23b-3dd5-4534-b1e9-a17318147433",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MousePosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "630dbbfb-98bd-4ef7-918c-d4c78b89ec0e",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1be0ce27-922d-4c8a-bb16-bd8a9f3f4b4f",
                    "path": "<Mouse>/leftButton",
                    "interactions": "Hold(duration=0.15)",
                    "processors": "",
                    "groups": "",
                    "action": "LeftClickHold",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}